Complete browse for food, offer food and sign in and sign up

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,27 +1,30 @@
-
-
 /*--------------- common styles ----------------*/
 
 @font-face {
     font-family: Roboto-Light;
     src: url(../fonts/Roboto-Light.ttf);
 }
+
 @font-face {
     font-family: Roboto-Bold;
     src: url(../fonts/Roboto-Bold.ttf);
 }
+
 @font-face {
     font-family: Roboto-Regular;
     src: url(../fonts/Roboto-Regular.ttf);
 }
+
 @font-face {
     font-family: Roboto-Thin;
     src: url(../fonts/Roboto-Thin.ttf);
 }
+
 @font-face {
     font-family: Raleway-Light;
     src: url(../fonts/Raleway-Light.ttf);
 }
+
 @font-face {
     font-family: Spirax-Regular;
     src: url(../fonts/Spirax-Regular.ttf);
@@ -31,7 +34,7 @@
 
 /*navigation*/
 
-.page_header{
+.page_header {
     background: #ffffff;
     border: none;
     padding: 10px;
@@ -40,24 +43,29 @@
     margin-bottom: 0px;
     border-radius: 0px;
 }
-.navbar-nav>li {
+
+.navbar-nav > li {
     padding: 12px;
     font-size: 16px;
 }
-.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover{
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:focus, .navbar-default .navbar-nav > .active > a:hover {
     color: #f7931e;
     background: #ffffff;
     border-bottom: solid 2px #f7931e;
 }
+
 /*.............main slider..................*/
-.main-slider-sec img{
+.main-slider-sec img {
     width: 100%;
     height: 100vh;
 }
-.main-slider-sec{
+
+.main-slider-sec {
     position: relative;
 }
-.main-slider-sec .home-button button{
+
+.main-slider-sec .home-button button {
     font-family: Raleway-Light;
     text-transform: uppercase;
     background: #f7931e;
@@ -70,33 +78,37 @@
     color: #ffffff;
     border: none;
     border-radius: 5px;
-    -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
-    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 /*...............join us section...........................*/
-#join{
+#join {
     background: url("../images/join-bottom.png") no-repeat;
     background-position: bottom center;
     /*background: fixed;*/
     min-height: 100vh;
 }
-.join-container{
+
+.join-container {
     background: #ffffff;
     margin-top: 50px;
 }
-.join-container h1{
+
+.join-container h1 {
     font-family: Spirax-Regular;
     text-align: center;
     color: #f7931e;
     text-transform: uppercase;
     margin-bottom: 30px;
 }
-.join-container .form-wrp{
+
+.join-container .form-wrp {
     margin-bottom: 20px;
 }
-.join-container .form-wrp input{
+
+.join-container .form-wrp input {
     padding: 12px;
     font-family: Raleway-Light;
     border: 1px solid #f7931e;
@@ -104,10 +116,12 @@
     width: 100%;
     text-align: center;
 }
-.join-container .form-wrp input:focus{
-    outline:none;
+
+.join-container .form-wrp input:focus {
+    outline: none;
 }
-.join-container button{
+
+.join-container button {
     font-family: Raleway-Light;
     text-transform: uppercase;
     background: #f7931e;
@@ -119,20 +133,24 @@
     margin: 0px auto;
     display: block;
     border-radius: 5px;
-    -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
-    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
 }
-.join-container button:focus{
+
+.join-container button:focus {
     outline: none;
 }
+
 /*------------------ signing page ------------------*/
 
-.signing{
+.signing {
     background: url("../images/signing-bg.jpg") fixed;
     background-size: cover;
+    min-height: 90vh;
 }
-.signing .signing-form{
+
+.signing .signing-form {
     /*min-height: 300px;*/
     background: #ffffffbd;
     text-align: center;
@@ -141,16 +159,19 @@
     display: block;
     margin: 100px auto;
 }
-.signing .signing-form h2{
+
+.signing .signing-form h2 {
     font-family: Raleway-Light;
     color: #f7931e;
     text-transform: uppercase;
     margin-bottom: 30px;
 }
-.signing .signing-form .form-wrp{
+
+.signing .signing-form .form-wrp {
     margin-bottom: 20px;
 }
-.signing .signing-form .form-wrp input{
+
+.signing .signing-form .form-wrp input {
     padding: 12px;
     font-family: Raleway-Light;
     border: 1px solid #f7931e;
@@ -158,10 +179,12 @@
     width: 100%;
     text-align: center;
 }
-.signing .signing-form .form-wrp input:focus{
-    outline:none;
+
+.signing .signing-form .form-wrp input:focus {
+    outline: none;
 }
-.signing .signing-form button{
+
+.signing .signing-form button {
     font-family: Raleway-Light;
     text-transform: uppercase;
     background: #f7931e;
@@ -173,37 +196,112 @@
     margin: 0px auto;
     display: block;
     border-radius: 5px;
-    -webkit-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
-    box-shadow: 5px 5px 5px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
 }
-.signing .signing-form button:focus{
+
+.signing .signing-form button:focus {
     outline: none;
 }
+
+/*...................offer foods.....................*/
+.offer-food {
+    background: url("../images/signing-bg.jpg") fixed;
+    background-size: cover;
+    min-height: 90vh;
+}
+
+.offer-food .offer-form {
+    /*min-height: 300px;*/
+    background: #ffffffbd;
+    /*text-align: center;*/
+    padding: 30px;
+    width: 70%;
+    display: block;
+    margin: 100px auto;
+}
+
+.offer-food .offer-form h2 {
+    font-family: Raleway-Light;
+    color: #f7931e;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.offer-food .offer-form .form-wrp {
+    margin-bottom: 20px;
+}
+
+.offer-food .offer-form .form-wrp input {
+    padding: 12px;
+    font-family: Raleway-Light;
+    border: 1px solid #f7931e;
+    border-radius: 50px;
+    width: 100%;
+}
+
+.offer-food .offer-form .form-wrp label {
+    font-family: Raleway-Light;
+
+}
+
+.offer-food .offer-form .form-wrp input:focus {
+    outline: none;
+}
+
+.offer-food .offer-form button {
+    font-family: Raleway-Light;
+    text-transform: uppercase;
+    background: #f7931e;
+    padding: 15px;
+    width: 50%;
+    font-size: 20px;
+    color: #ffffff;
+    border: none;
+    margin: 0px auto;
+    display: block;
+    border-radius: 5px;
+    -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
+.offer-food .offer-form button:focus {
+    outline: none;
+}
+
 /*.....................available foods.................*/
-#available-foods{
+#available-foods {
     min-height: 100vh;
     font-family: Raleway-Light;
     padding: 20px;
 }
-#available-foods h1{
+
+#available-foods h1 {
     font-family: Spirax-Regular;
     color: #f7931e;
     text-transform: uppercase;
     text-align: center;
 }
-#available-foods .food-item{
+
+#available-foods .food-item {
     padding: 25px;
     cursor: pointer;
     font-family: Raleway-Light;
     position: relative;
 }
-#available-foods .food-item:hover img{
-    opacity: 0.5;
+
+#available-foods .food-item:hover img {
+    /*opacity: 0.5;*/
+    filter: brightness(50%);
 }
-#available-foods .food-item:hover .middle{
+
+#available-foods .food-item:hover .middle {
     opacity: 1;
 }
+
 #available-foods .food-item .middle {
     transition: .5s ease;
     opacity: 0;
@@ -214,17 +312,20 @@
     -ms-transform: translate(-50%, -50%);
     text-align: center;
 }
-#available-foods .food-item:hover .middle{
+
+#available-foods .food-item:hover .middle {
     opacity: 1;
 }
-#available-foods .food-item .middle button{
+
+#available-foods .food-item .middle button {
     background: #f7931e;
     color: #ffffff;
     padding: 10px;
     opacity: 1;
     border: none;
 }
-#available-foods .food-item .item-name{
+
+#available-foods .food-item .item-name {
     position: absolute;
     top: 20px;
     right: 0px;
@@ -232,9 +333,9 @@
     color: #ffffff;
     padding: 10px;
 
-
 }
-#available-foods .food-item .item-name:before{
+
+#available-foods .food-item .item-name:before {
     content: '';
     position: absolute;
     border-top: solid transparent 20px;
@@ -244,7 +345,8 @@
     left: -28px;
     top: 0px;
 }
-#available-foods .food-item .item-name:after{
+
+#available-foods .food-item .item-name:after {
     content: '';
     position: absolute;
     width: 0;
@@ -255,20 +357,36 @@
     border-width: 25px 25px 0 0;
     border-color: #c57210 transparent transparent transparent;
 }
-#available-foods .food-item:hover .item-name{
+
+#available-foods .food-item:hover .item-name {
     display: none;
 }
-#available-foods .food-item p{
+
+#available-foods .food-item p {
     color: #ffffff;
     font-size: 16px;
     font-weight: bold;
 }
-@media (max-width: 1024px) {
 
-
+#available-foods .view-all {
+    font-family: Raleway-Light;
+    text-transform: uppercase;
+    background: #f7931e;
+    padding: 15px;
+    width: 30%;
+    font-size: 25px;
+    color: #ffffff;
+    border: none;
+    margin: 0px auto;
+    display: block;
+    border-radius: 5px;
+    -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
+@media (max-width: 1024px) {
 
-
+}
 
 /*------------ Responsive ----------------*/
