front end for all

--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,17 @@
 .join-container button:focus {
     outline: none;
 }
-
+.join-container select{
+    padding: 12px;
+    font-family: Raleway-Light;
+    border: 1px solid #f7931e;
+    border-radius: 50px;
+    width: 100%;
+    text-align-last: center;
+}
+.join-container select:focus{
+    outline: none;
+}
 /*------------------ signing page ------------------*/
 
 .signing {
@@ -199,10 +209,17 @@
     -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
     box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+    margin-bottom: 20px;
 }
 
 .signing .signing-form button:focus {
     outline: none;
+}
+.signing a{
+    font-family: Raleway-Light;
+    color: #122b40;
+    font-weight: 700;
+
 }
 
 /*...................offer foods.....................*/
@@ -271,7 +288,16 @@
 .offer-food .offer-form button:focus {
     outline: none;
 }
-
+.offer-food select{
+    padding: 12px;
+    font-family: Raleway-Light;
+    border: 1px solid #f7931e;
+    border-radius: 50px;
+    width: 100%;
+}
+.offer-food select:focus{
+    outline: none;
+}
 /*.....................available foods.................*/
 #available-foods {
     min-height: 100vh;
@@ -317,7 +343,7 @@
     opacity: 1;
 }
 
-#available-foods .food-item .middle button {
+#available-foods .food-item .middle a {
     background: #f7931e;
     color: #ffffff;
     padding: 10px;
@@ -384,7 +410,46 @@
     -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
     box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
 }
-
+.food-details h1{
+    font-family: Spirax-Regular;
+    text-align: center;
+    color: #f7931e;
+}
+.food-details img{
+    border: 1px solid #f7931e;
+    margin: 0 auto;
+}
+.food-details p{
+    font-family: Raleway-Light;
+}
+.food-details .confirm{
+    background: #f7931e;
+    padding: 10px;
+    opacity: 1;
+    border: none;
+    font-family: Raleway-Light;
+    font-size: 20px;
+    width: 25%;
+    text-align: center;
+}
+.list-items img{
+    /*min-width: 400px;*/
+    /*min-height: 400px;*/
+}
+.footer-sec{
+    background: #f7931e;
+    font-family: Roboto-Thin;
+    text-align: center;
+    color: #ffffff;
+    padding: 23px;
+}
+.food-details{
+    margin-bottom: 30px;
+}
+.food-details .confirm a{
+    text-decoration: none;
+    color: #ffffff;
+}
 @media (max-width: 1024px) {
 
 }
