--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@
 }
 
 .join-container h1 {
-    font-family: Spirax-Regular;
+    font-family:  Raleway-Light;
     text-align: center;
     color: #f7931e;
     text-transform: uppercase;
@@ -306,7 +306,7 @@
 }
 
 #available-foods h1 {
-    font-family: Spirax-Regular;
+    font-family:  Raleway-Light;
     color: #f7931e;
     text-transform: uppercase;
     text-align: center;
