--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,32 @@
     background: #ffffff;
     border-bottom: solid 2px #f7931e;
 }
+.page_header .dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.page_header .dropdown-content {
+    display: none;
+    position: absolute;
+    right: 0;
+    background-color: #fffccc;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    padding: 10px;
+    font-size: 14px;
+}
+
+.page_header .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.page_header .dropdown-content a:hover {background-color: #f1f1f1;}
+.page_header .dropdown:hover .dropdown-content {display: block;}
 
 /*.............main slider..................*/
 .main-slider-sec img {
@@ -333,6 +359,10 @@
 
 #available-foods .food-item:hover .middle {
     opacity: 1;
+
+}
+#available-foods .food-item:hover .middle p{
+    font-size: 10px;
 }
 
 #available-foods .food-item .middle {
@@ -368,7 +398,6 @@
     padding: 10px;
 
 }
-
 #available-foods .food-item .item-name:before {
     content: '';
     position: absolute;
@@ -466,6 +495,86 @@
     text-decoration: none;
     color: #ffffff;
 }
+/*................profile update.............*/
+
+.profile-update {
+    background: url("../images/pro-back.jpg") fixed;
+    background-size: cover;
+    min-height: 90vh;
+}
+
+.profile-update .profile-form {
+    /*min-height: 300px;*/
+    background: #ffffffbd;
+    /*text-align: center;*/
+    padding: 30px;
+    width: 70%;
+    display: block;
+    margin: 100px auto;
+}
+
+.profile-update .profile-form h2 {
+    font-family: Raleway-Light;
+    color: #f7931e;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    text-align: center;
+}
+
+.profile-update .profile-form .form-wrp {
+    margin-bottom: 20px;
+}
+
+.profile-update .profile-form .form-wrp input {
+    padding: 12px;
+    font-family: Raleway-Light;
+    border: 1px solid #f7931e;
+    border-radius: 50px;
+    width: 100%;
+}
+
+.profile-update .profile-form .form-wrp label {
+    font-family: Raleway-Light;
+
+}
+
+.profile-update .profile-form .form-wrp input:focus {
+    outline: none;
+}
+
+.profile-update .profile-form button {
+    font-family: Raleway-Light;
+    text-transform: uppercase;
+    background: #f7931e;
+    padding: 15px;
+    width: 50%;
+    font-size: 20px;
+    color: #ffffff;
+    border: none;
+    margin: 0px auto;
+    display: block;
+    border-radius: 5px;
+    -webkit-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
+.profile-update .profile-form button:focus {
+    outline: none;
+}
+
+.profile-update select {
+    padding: 12px;
+    font-family: Raleway-Light;
+    border: 1px solid #f7931e;
+    border-radius: 50px;
+    width: 100%;
+}
+
+.profile-update select:focus {
+    outline: none;
+}
+
 
 /*------------ Responsive ----------------*/
 
